--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -56,6 +56,12 @@ h3 {
   line-height: 1.2;
 }
 
+h4 {
+  font-size: 1.5rem;
+  font-family: "Recoleta-Regular";
+  line-height: 1.3;
+}
+
 p {
   font-size: 1rem;
   font-family: "Graphic-Regular";
