--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -69,8 +69,7 @@ p {
 }
 
 .background {
-  position: absolute;
-  min-width: 100%;
+  position: relative;
   background: url("/assets/background.svg");
   background-repeat: no-repeat;
 }
