--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -51,16 +51,17 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 2.25rem;
   font-family: "Recoleta-Regular";
   line-height: 1.2;
   text-align: left;
 }
 
 h4 {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-family: "Recoleta-Regular";
   line-height: 1.3;
+  text-align: left;
 }
 
 p,
