--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -35,7 +35,17 @@
 
 @font-face {
   font-family: "Graphic-Regular";
-  src: url(../fonts/Graphik-Regular.otf) format("truetype");
+  src: url(../fonts/Graphik-Regular-Web.woff2) format("truetype");
+}
+
+@font-face {
+  font-family: "Graphic-Medium";
+  src: url(../fonts/Graphik-Medium-Web.woff2) format("truetype");
+}
+
+@font-face {
+  font-family: "Graphic-Bold";
+  src: url(../fonts/Graphik-Bold-Web.woff2) format("truetype");
 }
 
 h1 {
@@ -76,13 +86,12 @@ a {
   font-size: 1rem;
   font-family: "Graphic-Regular";
   line-height: 1.6;
-  color: #736ebe;
   text-decoration: underline;
   transition: border-bottom 200ms ease-out;
 }
 
 a:hover {
-  color: #b7b4de;
+  font-family: "Graphic-Medium";
 }
 
 * {
