--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -42,7 +42,8 @@ h3 {
   text-align: left;
 }
 
-h4 {
+h4,
+.heading-4 {
   font-size: 1.5rem;
   font-family: "Recoleta-Regular";
   line-height: 1.3;
