--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -76,7 +76,7 @@ a:hover {
 
 .background {
   position: relative;
-  background: url("/assets/background.svg");
+  background: url("/assets/background.svg") no-repeat 0 -60px;
   background-repeat: no-repeat;
 }
 
