--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -35,21 +35,21 @@ h2 {
 }
 
 h3 {
-  font-size: 1.17rem;
+  font-size: 1.25rem;
   font-family: "Recoleta-Regular";
   text-align: left;
 }
 
 h4,
 .heading-4 {
-  font-size: 1rem;
+  font-size: 1.17rem;
   font-family: "Recoleta-Regular";
   text-align: left;
 }
 
 p,
 li {
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-family: "Graphic-Regular";
   text-align: left;
 }
@@ -61,7 +61,7 @@ a {
 }
 
 a:hover {
-  font-family: "Graphic-Medium";
+  font-weight: bold;
 }
 
 * {
