--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -43,6 +43,8 @@ h3 {
   font-size: 1.5rem;
   font-family: "Recoleta-Regular";
   text-align: left;
+  line-height: 1.1;
+  margin-bottom: 0.5rem;
 }
 
 h4,
